--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,18 @@
-name: Deploy to WordPress.org
+name: Deployement of Messesinfo to WordPress.org
 on:
   push:
     tags:
       - "*"
 jobs:
   tag:
-    name: New tag
+    name: New Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: WordPress Plugin Deploy
-        uses: 10up/action-wordpress-plugin-deploy@master
+        uses: sebastienserre/wordpress-actions/dotorg-plugin-deploy@master
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLUG: messesinfo
           SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
           SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
